tests/dev_server/errors/stories/js_module_undefined_is_not_a_function/file.js
console.log("before");
undefined();
console.log("after");
